--- a/client/src/MainPage.css
+++ b/client/src/MainPage.css
@@ -1,18 +1,37 @@
 /* 
-Wird auf alles in main.tsx angewendet außer was untergeordetes  
+Wird auf alles in MainPage.tsx angewendet außer was untergeordetes  
 wird explizit definiert   
 */
-.MainPage {
-    background-color:darkblue;
-    display: flex; /* Ordnet Tiles dynamisch an */
-    flex-wrap: wrap; /* Verhindert dass Tiles abgeschnitten werden */
-    justify-content: center; /* Zentriert alles im Body */
+
+  label {
+    display: block;
+    margin-top: 10px;
   }
   
-/* Definiert größe und Farbe der Tiles */
-  .tile {
-    width: 300px;
-    height: 400px;
-    margin: 10px;
-    background-color:cornflowerblue;
+  .card-container.card {
+    max-width: 350px !important;
+    padding: 40px 40px;
+  }
+  
+  .card {
+    background-color: #f7f7f7;
+    padding: 20px 25px 30px;
+    margin: 0 auto 25px;
+    margin-top: 50px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  }
+  
+  .profile-img-card {
+    width: 96px;
+    height: 96px;
+    margin: 0 auto 10px;
+    display: block;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
   }
