--- a/client/src/style/MainPage.css
+++ b/client/src/style/MainPage.css
@@ -68,3 +68,8 @@ wird explizit definiert
   .navbar-brand {
     color: #fff;
   }
+
+  .navbar navbar-expand navbar-dark bg-dark {
+    background-color: #2c3e50;
+    border-color: #2c3e50;
+  }
