--- a/client/src/style/Login.css
+++ b/client/src/style/Login.css
@@ -3,24 +3,72 @@
 */
 
 
-.col-md-12 {
-  padding: 0;
+
+/* Login-Seite */
+
+.card-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: auto;
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #333333c8;
+  border-radius: 0;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.card card-container {
-  max-width: 350px !important;
-  padding: 40px 40px;
-  background-color: brown;
+.logo-img-card {
+  width: 200px; 
+  height: auto; 
+  filter: drop-shadow(2px 2px 15px rgba(0, 0, 0, 0.431));
 }
 
-.form-group {
-  text-align: left;
+
+.card-container .form-group {
+  margin-bottom: 15px;
 }
 
-.form-group d-grid {
+.card-container label {
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.card-container .form-control {
+  width: 100%;
+  padding: 10px;
+  background-color: #8c8c8f98;
+  border-radius: 0;
+  
+  
+}
+
+.card-container .alert {
   margin-top: 10px;
+  border-radius: 0;
 }
 
-.btn btn-outline-primary btn-block {
-  margin-top: 10px;
+.card-container .btn {
+  padding: 10px;
+  background-color: #2ecc71;
+  color: #ffffff;
+  border: none;
+  border-radius: 0;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
 }
+
+.card-container .btn:hover {
+  background-color: #27ae60;
+}
+
+.card-container .spinner-border {
+  margin-right: 5px;
+}
+
+
+
+
+
