--- a/client/src/style/Home.css
+++ b/client/src/style/Home.css
@@ -9,33 +9,46 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
   text-align: center;
 }
 
-.tiles-container {
+div.Home .tiles-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  max-height: 150px; /* Anpassen der maximalen Höhe nach Bedarf */
   overflow-y: auto;
+  
 }
 
-.logo-img-card {
-  width: 33.33%;
+div.Home .logo-img-card {
+  width: 40%;
   height: auto;
   margin-bottom: 20px;
 }
 
-.tile {
+div.Home .tile  {
   margin-bottom: 20px;
+  max-height: 180px;
   text-align: center;
+  padding: 20px;
+  background-color: #7dafd0c0;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 
-.message {
+div.Home .tile:hover {
+  background-color:#7dafd0 ;
+  transform: translateY(-5px);
+}
+
+div.Home .message h1 {
   text-align: center;
   margin-bottom: 20px;
+  font-size: 50px;
+  font-weight: bold;
+  color: white;
+  -webkit-text-stroke: 2px rgb(29, 70, 24);
 }
 
 
